# KRAKEENONE

./: .gitmodules  CMakeLists.txt  SMTPmessageManager.cpp  SMTPmessageManager.h  aboutframe.cpp  aboutframe.h  breakinframe.cpp  breakinframe.h  dustframe.cpp  dustframe.h  enterpasswordframe.cpp  enterpasswordframe.h  frame.cpp  frame.h  functionsframe.cpp  functionsframe.h  ibuttonframe.cpp  ibuttonframe.h  main.cpp  mainframe.cpp  mainframe.h  mainwidget.cpp  mainwidget.h  moistureframe.cpp  moistureframe.h  positionframe.cpp  positionframe.h  powerframe.cpp  powerframe.h  runninghoursframe.cpp  runninghoursframe.h  serialportmanager.cpp  serialportmanager.h  settings.ini  temperatureframe.cpp  temperatureframe.h  trayIcon.qrc  vibrationframe.cpp  vibrationframe.h
firmware/: BreakInSensors.cpp  DustSensors.cpp  IButtonManager.cpp  IButtonManager.h  InternalMemoryManager.cpp  InternalMemoryManager.h  Krakeenone_pinout.h  MoistureSensors.cpp  PcPower.cpp  PcPower.h  PositionVibrationSensors.cpp  PowerButtonWatcher.cpp  SerialPortManager.cpp  SerialPortManager.h  TemperatureSensors.cpp  dataStructures.h  firmware.ino
